# dataset-translator

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
config/: base.py  cot.py  default.py  qa.py
engine/: base.py  groq.py  ollama.py  vllm.py
engine/utils/: __init__.py  lang.py  run.py
gui/: __init__.py  app.py
gui/components/: banner.py  common.py  credential_manager.py  field_mapping.py  logs.py  source_config.py  translation_settings.py
gui/config/: styles.py
gui/handlers/: common.py  mapping.py  source.py  translation.py
gui/utils/: field.py  io.py  json.py
samples/: test.py  test_dynamic.py  test_groq.py  test_ollama.py  test_ollama_magpie.py  test_parquet.py  test_vllm.py
strings/: __init__.py  anti_chinese.py  build.py
strings/cleaner/: __init__.py  fuzzy.c  fuzzy.pyi  setup.py
translator/: callback.py  parser.py
translator/callback/: base.py  gradio.py  huggingface.py  verbose.py
translator/callback/utils/: template.md
translator/file/: reader.py
translator/file/json/: processor.py  utils.py
translator/file/parquet/: processor.py  utils.py
translator/filters/: __init__.py  code.py  fail.py
translator/parser/: base.py  dynamic.py
translator/parser/utils/: batch.py  config.py  mapper.py  memory.py  translation.py
translator/preprocessing/: utils.py  wrapper.py
