[project]
name = "dataset-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.3.2",
    "fuzzywuzzy>=0.18.0",
    "groq>=0.18.0",
    "memoization>=0.4.0",
    "openai>=1.66.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.3",
    "setuptools>=76.0.0",
    "tdqm>=0.0.1",
    "tenacity>=9.0.0",
]
